src/objects/MethodOfPayment__c.object
<CustomObject>
    <description>Track the method of payment from the student to clear the student</description>
    <fields>
        <fullName>Admission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission</label>
        <referenceTo>Admission__c</referenceTo>
        <relationshipLabel>Method of Payment</relationshipLabel>
        <relationshipName>Method_of_Payment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BranchOfService__c</fullName>
        <label>Branch of Service</label>
        <picklist>
            <controllingField>PrimaryTuitionSource__c</controllingField>
            <picklistValues>
                <fullName>US Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Air Force Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Army Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army National Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Coast Guard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Marine Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Marine Corp Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Navy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Navy Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOArmyEd</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAREProfile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CARE Profile</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Method of Payment</relationshipLabel>
        <relationshipName>MethodPayment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactFinancialAidStatus__c</fullName>
        <formula>CAREProfile__r.Account.StudentContact__r.FinancialAidStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Financial Aid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryTuitionSource__c</fullName>
        <label>Primary Tuition Source</label>
        <picklist>
            <picklistValues>
                <fullName>3P - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA - Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP - Self Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTA - Military Tuition Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - Veterans Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR - Military Vocational Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIA - Workforce Investment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAA - Trade Adjustment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military DOD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReadyForPackaging__c</fullName>
        <formula>TEXT( Admission__r.ReadyForPackaging__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Packaging</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryTuitionSource__c</fullName>
        <label>Secondary Tuition Source</label>
        <picklist>
            <picklistValues>
                <fullName>3P - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA - Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP - Self Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTA - Military Tuition Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - Veterans Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR - Military Vocational Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIA - Workforce Investment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAA - Trade Adjustment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceOfFinancialAid__c</fullName>
        <label>Source of Financial Aid</label>
        <picklist>
            <picklistValues>
                <fullName>3P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Method of Payment</relationshipLabel>
        <relationshipName>FinancialAid</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdTuitionSource__c</fullName>
        <label>Third Tuition Source</label>
        <picklist>
            <picklistValues>
                <fullName>3P - Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA - Financial Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP - Self Pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTA - Military Tuition Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA - Veterans Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MVR - Military Vocational Rehab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIA - Workforce Investment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAA - Trade Adjustment Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Method of Payment</label>
    <nameField>
        <displayFormat>{MM}.{YYYY}-{0}</displayFormat>
        <label>Date Created</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Method of Payment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>